[~TASK] Take localized cms page info from html file instead of xml

--- a/src/app/locale/de_DE/template/magesetup/page/order.html
+++ b/src/app/locale/de_DE/template/magesetup/page/order.html
@@ -1,9 +1,12 @@
+<!--@title Bestellvorgang @-->
+<!--@identifier order @-->
+<!--@root_template one_column @-->
 <h1>DISCLAIMER</h1>
 
 <p>Die hier bereitgestellten Mustertexte sind ausdrücklich als 
 <strong>MUSTER</strong> zu verstehen und müssen in jedem Fall durch 
 eigene rechtssichere Texte unter CMS -> Statische Blöcke ersetzt 
-werden. Weder MageSetup e.V. noch Trusted Shops tragen für die
+werden. Weder FireGento e.V. noch Trusted Shops tragen für die
 Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <h2>Bestellvorgang, einfach und bequem bestellen</h2>
