--- a/src/app/locale/en_US/template/magesetup/page/404.html
+++ b/src/app/locale/en_US/template/magesetup/page/404.html
@@ -1,6 +1,9 @@
-<h2>404 - Seite nicht gefunden</h2>
+<!--@title Page not found @-->
+<!--@identifier no-route @-->
+<!--@root_template one_column @-->
+<h2>404 - Page not found</h2>
 <p>Leider konnte die angeforderte Seite nicht gefunden werden, scheinbar wurde eine nicht korrekte URL eingegeben. So ist der 404 Fehler entstanden. Bitte nutzen Sie unsere <a href="{{store url="catalogsearch/advanced"}}">Suche</a> oder wechseln Sie zu unserer <a href="{{store url=""}}">Startseite</a> um in unserem umfangreichen Sortiment zu stöbern.</p>
 <ul>
-    <li><a href="{{store url='catalogsearch/advanced'}}">Suche</a></li>
-    <li><a href="{{store url=''}}">Startseite</a></li>
+    <li><a href="{{store url='catalogsearch/advanced'}}">Search</a></li>
+    <li><a href="{{store url=''}}">Home Page</a></li>
 </ul>
