--- a/src/app/locale/en_US/template/magesetup/page/payment.html
+++ b/src/app/locale/en_US/template/magesetup/page/payment.html
@@ -1,9 +1,12 @@
+<!--@title Payment Methods @-->
+<!--@identifier payment @-->
+<!--@root_template one_column @-->
 <h1>DISCLAIMER</h1>
 
 <p>Die hier bereitgestellten Mustertexte sind ausdrücklich als 
 <strong>MUSTER</strong> zu verstehen und müssen in jedem Fall durch 
 eigene rechtssichere Texte unter CMS -> Statische Blöcke ersetzt 
-werden. Weder der MageSetup e.V. noch Trusted Shops tragen für die
+werden. Weder der FireGento e.V. noch Trusted Shops tragen für die
 Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <h2>Zahlungsarten</h2>
