--- a/src/app/locale/en_US/template/magesetup/page/privacy.html
+++ b/src/app/locale/en_US/template/magesetup/page/privacy.html
@@ -1,1 +1,4 @@
-<h2><i>Fügen Sie hier Ihre Datenschutzerklärung ein.</i></h2>
+<!--@title Privacy Declaration @-->
+<!--@identifier privacy @-->
+<!--@root_template one_column @-->
+<h2><i>Please insert your Privacy Declaration here.</i></h2>
