[~TASK] Take localized cms blocks info from html file instead of xml; generate footer links from localized html page templates

--- a/src/app/locale/en_US/template/magesetup/page/business_terms.html
+++ b/src/app/locale/en_US/template/magesetup/page/business_terms.html
@@ -1,4 +1,4 @@
 <!--@title Business Terms @-->
 <!--@identifier business_terms @-->
 <!--@root_template one_column @-->
-{{block type="cms/block" block_id="gs_business_terms"}}
+{{block type="cms/block" block_id="business_terms"}}
