--- a/src/app/locale/de_DE/template/magesetup/page/business_terms.html
+++ b/src/app/locale/de_DE/template/magesetup/page/business_terms.html
@@ -1,4 +1,4 @@
 <!--@title AGB @-->
 <!--@identifier agb @-->
 <!--@root_template one_column @-->
-{{block type="cms/block" block_id="gs_business_terms"}}
+{{block type="cms/block" block_id="business_terms"}}
