--- a/src/app/locale/en_US/template/magesetup/agreement/revocation.html
+++ b/src/app/locale/en_US/template/magesetup/agreement/revocation.html
@@ -1,1 +1,3 @@
+<!--@name Revocation @-->
+<!--@checkbox_text I have read the Right of Revocation. @-->
 {{block type="cms/block" block_id="revocation"}}
