[~TASK] Added translations to recommended modules

--- a/src/app/design/adminhtml/default/default/template/magesetup/extensions.phtml
+++ b/src/app/design/adminhtml/default/default/template/magesetup/extensions.phtml
@@ -12,35 +12,46 @@
         <div class="hor-scroll">
             <table cellspacing="0" class="form-list">
                 <tbody>
-                    <tr><td class="value" colspan="2"><strong>Deutsches Sprachpaket</strong></td></tr>
+                    <tr><td class="value" colspan="2"><strong><?php echo $this->__('German Language Pack') ?></strong></td></tr>
                     <tr>
-                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
                         <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2317/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2317/</a></td>
                     </tr>
                     <tr>
-                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
                         <td class="value">http://connect20.magentocommerce.com/community/Locale_Mage_community_de_DE</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
 
-                    <tr><td class="value" colspan="2"><strong>Grundpreis-Modul (PAngV)</strong></td></tr>
+                    <tr><td class="value" colspan="2"><strong><?php echo $this->__('FireGento PDF') ?></strong></td></tr>
                     <tr>
-                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/pdf-9999.html" target="_blank">http://www.magentocommerce.com/magento-connect/pdf-9999.html</a></td>
+                    </tr>
+                    <tr>
+                        <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
+                        <td class="value">http://connect20.magentocommerce.com/community/FireGento_Pdf</td>
+                    </tr>
+                    <tr><td colspan="2">&nbsp;</td></tr>
+
+                    <tr><td class="value" colspan="2"><strong><?php echo $this->__('Base Price') ?></strong></td></tr>
+                    <tr>
+                        <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
                         <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2897/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2897/</a></td>
                     </tr>
                     <tr>
-                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
                         <td class="value">http://connect20.magentocommerce.com/community/DerModPro_BasePrice</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
 
-                    <tr><td class="value" colspan="2"><strong>Newsletter Abmeldung als Gast und Double Opt-In für registrierte Kunden</strong></td></tr>
+                    <tr><td class="value" colspan="2"><strong><?php echo $this->__('Newsletter Unsubscription for Guests, Double Opt In for registered Customers') ?></strong></td></tr>
                     <tr>
-                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
                         <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/15534/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/15534/</a></td>
                     </tr>
                     <tr>
-                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
                         <td class="value">http://connect20.magentocommerce.com/community/Loewenstark_Newsletter</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
@@ -59,46 +70,46 @@
         <div class="hor-scroll">
             <table cellspacing="0" class="form-list">
                 <tbody>
-                    <tr><td class="value" colspan="2"><strong>Bankeinzug/Lastschrift</strong></td></tr>
+                    <tr><td class="value" colspan="2"><strong><?php echo $this->__('Debit Payment') ?></strong></td></tr>
                     <tr>
-                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
                         <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2606/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2606/</a></td>
                     </tr>
                     <tr>
-                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
                         <td class="value">http://connect20.magentocommerce.com/community/DebitPayment</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
 
-                    <tr><td class="value" colspan="2"><strong>Nachnahme</strong></td></tr>
+                    <tr><td class="value" colspan="2"><strong><?php echo $this->__('Cash on Delivery') ?></strong></td></tr>
                     <tr>
-                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
                         <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2360/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2360/</a></td>
                     </tr>
                     <tr>
-                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
                         <td class="value">http://connect20.magentocommerce.com/community/CashOnDelivery</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
 
-                    <tr><td class="value" colspan="2"><strong>Vorkasse</strong></td></tr>
+                    <tr><td class="value" colspan="2"><strong><?php echo $this->__('Bank Payment') ?></strong></td></tr>
                     <tr>
-                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
                         <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2298/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2298/</a></td>
                     </tr>
                     <tr>
-                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
                         <td class="value">http://connect20.magentocommerce.com/community/BankPayment</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
 
-                    <tr><td class="value" colspan="2"><strong>Rechnung</strong></td></tr>
+                    <tr><td class="value" colspan="2"><strong><?php echo $this->__('Invoice Payment') ?></strong></td></tr>
                     <tr>
-                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
                         <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/17239/s/invoice-6810/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/17239/s/invoice-6810/</a></td>
                     </tr>
                     <tr>
-                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
                         <td class="value">http://connect20.magentocommerce.com/community/InvoicePayment</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
