[+TASK] Updated english versions of cms pages, created english translation file

--- a/src/app/locale/en_US/template/magesetup/page/imprint.html
+++ b/src/app/locale/en_US/template/magesetup/page/imprint.html
@@ -1,6 +1,8 @@
 <!--@title Imprint @-->
 <!--@identifier imprint @-->
 <!--@root_template one_column @-->
+<h2><i>Please insert your imprint here.</i></h2>
+
 <h1>DISCLAIMER</h1>
 
 <p>Die hier bereitgestellten Mustertexte sind ausdrücklich als 
