--- a/src/app/locale/en_US/template/magesetup/page/payment.html
+++ b/src/app/locale/en_US/template/magesetup/page/payment.html
@@ -1,6 +1,8 @@
 <!--@title Payment Methods @-->
 <!--@identifier payment @-->
 <!--@root_template one_column @-->
+<h2><i>Please insert your payment methods and further details here.</i></h2>
+
 <h1>DISCLAIMER</h1>
 
 <p>Die hier bereitgestellten Mustertexte sind ausdrücklich als 
