--- a/src/app/locale/en_US/template/magesetup/page/order.html
+++ b/src/app/locale/en_US/template/magesetup/page/order.html
@@ -1,6 +1,8 @@
 <!--@title Order Process @-->
 <!--@identifier order @-->
 <!--@root_template one_column @-->
+<h2><i>Please insert details about your order process here.</i></h2>
+
 <h1>DISCLAIMER</h1>
 
 <p>Die hier bereitgestellten Mustertexte sind ausdrücklich als 
