--- a/src/app/locale/en_US/template/magesetup/page/shipping.html
+++ b/src/app/locale/en_US/template/magesetup/page/shipping.html
@@ -1,4 +1,4 @@
 <!--@title Shipping @-->
 <!--@identifier shipping @-->
 <!--@root_template one_column @-->
-<h2><i>Fügen Sie hier Ihre Versandkostenaufstellung und weitere Einzelheiten zur Lieferung ein.</i></h2>
+<h2><i>Please insert your shipping methods and shipping costs here.</i></h2>
