[+TASK] Added configuration for Russia and updated translations

--- a/src/app/design/adminhtml/default/default/template/magesetup/extensions.phtml
+++ b/src/app/design/adminhtml/default/default/template/magesetup/extensions.phtml
@@ -63,7 +63,7 @@
 
 <div class="entry-edit">
     <div class="entry-edit-head">
-        <h4 class="icon-head head-edit-form fieldset-legend"><?php echo $this->__('Popular Payment Methods in Germany') ?></h4>
+        <h4 class="icon-head head-edit-form fieldset-legend"><?php echo $this->__('Popular Payment Methods') ?></h4>
         <div class="form-buttons"></div>
     </div>
     <div class="fieldset fieldset-wide" id="group_fields7">
