--- a/src/app/design/adminhtml/default/default/template/magesetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/magesetup/form.phtml
@@ -240,19 +240,19 @@
                             <td class="value">
                                 <table cellspacing="5" class="">
                                     <tbody>
-                                        <?php foreach($this->getProductTaxClasses() as $taxClass): ?>
+                                        <?php foreach($this->getProductTaxClasses() as $oldTaxClass): ?>
                                         <tr>
                                             <td><?php echo $this->__('Old') ?>: </td>
-                                            <td><strong><?php echo $taxClass['label'] ?></strong></td>
+                                            <td><strong><?php echo $oldTaxClass['label'] ?></strong></td>
                                             <td><?php echo $this->__('New') ?>: </td>
                                             <td>
-                                                <select name="product_tax_class_target[<?php echo $taxClass['value'] ?>]">
-                                                    <?php foreach($this->getNewProductTaxClasses() as $taxClass): ?>
+                                                <select id="product_tax_classes_new_<?php echo $oldTaxClass['value'] ?>" name="product_tax_class_target[<?php echo $oldTaxClass['value'] ?>]">
+                                                    <?php foreach($this->getNewProductTaxClasses() as $newTaxClass): ?>
                                                         <option
-                                                            value="<?php echo $taxClass['value'] ?>"
-                                                            <?php if ($this->getDefaultProductTaxClass() == $taxClass['value']): ?>selected="selected"<?php endif ?>
+                                                            value="<?php echo $newTaxClass['value'] ?>"
+                                                            <?php if ($this->getDefaultProductTaxClass() == $newTaxClass['value']): ?>selected="selected"<?php endif ?>
                                                         >
-                                                        <?php echo $taxClass['label'] ?></option>
+                                                        <?php echo $newTaxClass['label'] ?></option>
                                                     <?php endforeach ?>
                                                 </select>
                                             </td>
@@ -270,6 +270,34 @@
 </div>
 <script type="text/javascript">
     setupForm = new varienForm('setup_form', '');
+
+    Object.prototype.foreach = function( callback ) {
+        for( var k in this ) {
+            if(this.hasOwnProperty(k)) {
+                callback( k, this[ k ] );
+            }
+        }
+    }
+
+    var newTaxClassesByCountry = <?php echo $this->getNewProductTaxClassesJson() ?>;
+
+    updateNewTaxClassSelect = function(countryId) {
+        if (newTaxClassesByCountry[countryId]) {
+            var optionsHtml = '';
+            newTaxClassesByCountry[countryId].foreach(function(countryId, countryName) {
+                optionsHtml += '<option value="' + countryId + '">' + countryName + '</option>';
+            });
+            <?php foreach($this->getProductTaxClasses() as $oldTaxClass): ?>
+            $('product_tax_classes_new_<?php echo $oldTaxClass['value'] ?>').innerHTML = optionsHtml;
+            <?php endforeach ?>
+        }
+    }
+    
+    updateNewTaxClassSelect($F('select_country'));
+    
+    $('select_country').observe('change', function(event) {
+        updateNewTaxClassSelect($F('select_country'));
+    });
 </script>
 
 <div class="content-footer right">
