--- a/src/app/locale/de_DE/template/magesetup/page/order.html
+++ b/src/app/locale/de_DE/template/magesetup/page/order.html
@@ -29,7 +29,7 @@ Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <p>Überprüfen Sie nun Ihre Versandadresse und geben Sie Ihre gewünschte <a href="{{store url="lieferung"}}">Versandart</a> an. Durch Klicken des Buttons "Weiter" gelangen Sie zum nächsten Bestellschritt.</p>
 
-<h4>5. Bestellvorgang abschließen / AGB und Datenschutz</h4>
+<h4>5. Bestellvorgang abschließen / AGB und Widerrufsbelehrung</h4>
 
 <p>Sie erhalten eine Übersicht Ihrer Bestellung: die ausgewählten Produkte, die Versand- und Rechnungsadresse und Ihre Kontaktdaten. Überprüfen Sie, ob alle Angaben stimmen und lesen sich bitte die <a href="{{store url="agb"}}">Allgemeinen Geschäftsbedingungen</a> und die <a href="{{store url="widerruf"}}">Widerrufsbelehrung</a> aufmerksam durch. Sie können mit der Bestellung nur fortfahren, wenn Sie den AGB und der Widerrufsbelehrung zustimmen (Häkchen setzen). Mit dem Anklicken des Buttons "Jetzt kaufen" übersenden Sie Ihre Bestellung an uns. Hiermit geben Sie ein rechtsverbindliches Angebot ab.</p>
 
