--- a/src/app/design/adminhtml/default/default/template/magesetup/notifications.phtml
+++ b/src/app/design/adminhtml/default/default/template/magesetup/notifications.phtml
@@ -1,6 +1,9 @@
-<?php /** @var $this FireGento_MageSetup_Block_Adminhtml_Notifications */ ?>
+<?php /* @var $this FireGento_MageSetup_Block_Adminhtml_Notifications */ ?>
 <?php if (!$this->isInitialized()): ?>
 <div class="notification-global">
+    <span class="f-right">
+        <a href="<?php echo $this->getSkipUrl() ?>"><?php echo $this->__('Skip installation') ?></a>
+    </span>
     <strong><?php echo $this->helper('magesetup')->__('MageSetup has been installed.') ?></strong>
     <?php echo $this->helper('magesetup')->__('Click <a href="%s">here</a> to set up your pages, blocks, emails and tax settings.', $this->getManageUrl()) ?>
 </div>
