remove default country DE and replace it with the one configured from the shop, add fr_CH and de_CH locale support for CMS content. Idea for future is to support locale variant (fr_CH, de_CH, fr_BE, ne_BE, ...) for Tax and transaction emails labels which are generated during the Setup of this module

--- a/src/app/design/adminhtml/default/default/template/magesetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/magesetup/form.phtml
@@ -54,7 +54,7 @@
                             <td class="value" style="width:160px !important;">
                                 <select name="country" id="select_country" style="width:150px !important;">
                                     <?php foreach ($this->getAvailableCountriesForSetup() as $countryCode => $countryName): ?>
-                                    <option value="<?php echo $countryCode ?>"<?php if (Mage::getStoreConfig('magesetup/default_country') == $countryCode): ?> selected="selected"<?php endif ?>><?php echo $countryName ?></option>
+                                    <option value="<?php echo $countryCode ?>"<?php if (strtolower(Mage::getStoreConfig('general/country/default')) == $countryCode): ?> selected="selected"<?php endif ?>><?php echo $countryName ?></option>
                                     <?php endforeach ?>
                                 </select>
                             </td>
