--- a/src/app/design/adminhtml/default/default/template/magesetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/magesetup/form.phtml
@@ -15,7 +15,7 @@
  * @category  FireGento
  * @package   FireGento_MageSetup
  * @author    FireGento Team <team@firegento.com>
- * @copyright 2013 FireGento Team (http://www.firegento.de). All rights served.
+ * @copyright 2013 FireGento Team (http://www.firegento.com)
  * @license   http://opensource.org/licenses/gpl-3.0 GNU General Public License, version 3 (GPLv3)
  * @version   $Id:$
  * @since     0.4.0
@@ -156,8 +156,8 @@
                 </table>
             </div>
         </div>
-        
-        
+
+
         <div class="entry-edit-head">
             <h4 class="icon-head head-edit-form fieldset-legend"><?php echo $this->__('CMS Settings') ?></h4>
             <div class="form-buttons"></div>
@@ -330,9 +330,9 @@
             <?php endforeach ?>
         }
     }
-    
+
     updateNewTaxClassSelect($F('select_country'));
-    
+
     $('select_country').observe('change', function(event) {
         updateNewTaxClassSelect($F('select_country'));
     });
