[TASK] Reduced and unified comments hell

--- a/src/app/design/frontend/base/default/template/magesetup/checkout/onepage/agreements.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/checkout/onepage/agreements.phtml
@@ -10,28 +10,14 @@
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  *
- * PHP version 5
- *
  * @category  FireGento
  * @package   FireGento_MageSetup
  * @author    FireGento Team <team@firegento.com>
  * @copyright 2013 FireGento Team (http://www.firegento.com)
  * @license   http://opensource.org/licenses/gpl-3.0 GNU General Public License, version 3 (GPLv3)
- * @version   $Id:$
- * @since     0.1.0
  */
-/**
- * Checkout Agreements
- *
- * @category  FireGento
- * @package   FireGento_MageSetup
- * @author    FireGento Team <team@firegento.com>
- * @copyright 2013 FireGento Team (http://www.firegento.com)
- * @license   http://opensource.org/licenses/gpl-3.0 GNU General Public License, version 3 (GPLv3)
- * @version   $Id:$
- * @since     1.2.2
- */
-
+?>
+<?php
 /**
  * @var $this FireGento_MageSetup_Block_Checkout_Agreements
  */
