--- a/src/app/design/frontend/base/default/template/magesetup/imprint/tax.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/imprint/tax.phtml
@@ -10,20 +10,16 @@
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  *
- * PHP version 5
- *
  * @category  FireGento
  * @package   FireGento_MageSetup
  * @author    FireGento Team <team@firegento.com>
  * @copyright 2013 FireGento Team (http://www.firegento.com)
  * @license   http://opensource.org/licenses/gpl-3.0 GNU General Public License, version 3 (GPLv3)
- * @version   $Id:$
- * @since     0.1.0
  */
 ?>
 <?php
 /**
- * @see FireGento_MageSetup_Block_Imprint_Content
+ * @var $this FireGento_MageSetup_Block_Imprint_Content
  */
 ?>
 <?php if (strlen(trim($this->getFinancialOffice()))): ?>
