--- a/src/app/design/frontend/base/default/template/magesetup/shipping.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/shipping.phtml
@@ -10,37 +10,22 @@
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  *
- * PHP version 5
- *
  * @category  FireGento
  * @package   FireGento_MageSetup
  * @author    FireGento Team <team@firegento.com>
  * @copyright 2013 FireGento Team (http://www.firegento.com)
  * @license   http://opensource.org/licenses/gpl-3.0 GNU General Public License, version 3 (GPLv3)
- * @version   $Id:$
- * @since     0.1.0
  */
-/**
- * Template for shipping cost link
- *
- * @category  FireGento
- * @package   FireGento_MageSetup
- * @author    FireGento Team <team@firegento.com>
- * @copyright 2013 FireGento Team (http://www.firegento.com)
- * @license   http://opensource.org/licenses/gpl-3.0 GNU General Public License, version 3 (GPLv3)
- * @version   $Id:$
- * @since     1.2.0
- */
-
+?>
+<?php
 /**
  * @var $this Mage_Checkout_Block_Cart_Shipping
  */
 ?>
-
 <?php $shippingCostUrl = Mage::helper( 'magesetup' )->getShippingCostUrl() ?>
 <?php if( !empty( $shippingCostUrl )): ?>
-<div class="shipping">
-    <h2><?php echo $this->__('Shipping Costs') ?></h2>
-    <p><a href="<?php echo $shippingCostUrl ?>"><?php echo $this->__('Here you find information regarding the shipping costs.') ?></a></p>
-</div>
+    <div class="shipping">
+        <h2><?php echo $this->__('Shipping Costs') ?></h2>
+        <p><a href="<?php echo $shippingCostUrl ?>"><?php echo $this->__('Here you find information regarding the shipping costs.') ?></a></p>
+    </div>
 <?php endif ?>
