--- a/src/app/locale/de_CH/template/magesetup/page/imprint.html
+++ b/src/app/locale/de_CH/template/magesetup/page/imprint.html
@@ -25,7 +25,7 @@ Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <p>{{block type="magesetup/imprint_field" value="business_rules"}}</p>
 
-<p>Sie erreichen unseren Kundendienst für Fragen Reklamationen und Beanstandungen unter Telefon: {{block type="magesetup/imprint_field" value="telephone"}} sowie per Email unter <a href="mailto:{{block type="magesetup/imprint_field" value="email"}}">{{block type="magesetup/imprint_field" value="email"}}</a>. Für Anfragen können Sie auch das Kontaktformular auf unserer Internetseite nutzen.</p>
+<p>Sie erreichen unseren Kundendienst für Fragen Reklamationen und Beanstandungen unter Telefon: {{block type="magesetup/imprint_field" value="telephone"}} sowie per Email unter {{block type="magesetup/imprint_field" value="email"}}. Für Anfragen können Sie auch das Kontaktformular auf unserer Internetseite nutzen.</p>
 
 <h3>Disclaimer (Muster)</h3>
 
