--- a/src/app/locale/en_US/template/magesetup/page/imprint.html
+++ b/src/app/locale/en_US/template/magesetup/page/imprint.html
@@ -19,4 +19,4 @@
 
 <p>{{block type="magesetup/imprint_field" value="business_rules"}}</p>
 
-<p>Call us at {{block type="magesetup/imprint_field" value="telephone"}} or write an email to <a href="mailto:{{block type="magesetup/imprint_field" value="email"}}">{{block type="magesetup/imprint_field" value="email"}}</a>.</p>
+<p>Call us at {{block type="magesetup/imprint_field" value="telephone"}} or write an email to {{block type="magesetup/imprint_field" value="email"}}.</p>
