--- a/src/app/locale/it_IT/template/magesetup/page/imprint.html
+++ b/src/app/locale/it_IT/template/magesetup/page/imprint.html
@@ -25,7 +25,7 @@ contenute in questa pagina.</p>
 
 <p>{{block type="magesetup/imprint_field" value="business_rules"}}</p>
 
-<p>Potete contattare il nostro Servizio Clienti per informazioni e reclami telefonicamente al numero {{block type="magesetup/imprint_field" value="telephone"}} o tramite e-mail all'indirizzo <a href="mailto:{{block type="magesetup/imprint_field" value="email"}}">{{block type="magesetup/imprint_field" value="email"}}</a>. Per qualsiasi informazione è inoltre possibile usare il form sulla nostra pagina Contatti.</p>
+<p>Potete contattare il nostro Servizio Clienti per informazioni e reclami telefonicamente al numero {{block type="magesetup/imprint_field" value="telephone"}} o tramite e-mail all'indirizzo {{block type="magesetup/imprint_field" value="email"}}. Per qualsiasi informazione è inoltre possibile usare il form sulla nostra pagina Contatti.</p>
 
 <h3>Responsabilità per i link (Esempio)</h3>
 
