--- a/src/app/design/frontend/base/default/template/magesetup/imprint/email_footer.phtml
+++ b/src/app/design/frontend/base/default/template/magesetup/imprint/email_footer.phtml
@@ -43,7 +43,7 @@
     <?php if (strlen(trim($this->getWeb()))): ?>
     <?php echo $this->__('Web') ?>: <a href="http://<?php echo $this->getWeb() ?>" title="<?php echo $this->getCompanyFirst() ?>"><?php echo $this->getWeb() ?></a><br />
     <?php endif ?>
-    <?php echo $this->__('E-Mail') ?>: <a href="mailto:<?php echo $this->getEmail() ?>" title="<?php echo $this->getCompanyFirst() ?>"><?php echo $this->getEmail() ?></a>
+    <?php echo $this->__('E-Mail') ?>: <?php echo $this->getEmail(false) ?>
 </p>
 
 <p>
