--- a/src/app/locale/fr_FR/template/magesetup/page/imprint.html
+++ b/src/app/locale/fr_FR/template/magesetup/page/imprint.html
@@ -25,7 +25,7 @@
 <p>{{block type="magesetup/imprint_field" value="business_rules"}}</p>
 
 <p>
-    Vous pouvez contacter nottre service clientèle pour toutes questions ou réclamations auprès du numéro de téléphone suivant: {{block type="magesetup/imprint_field" value="telephone"}} ou bien par email <a href="mailto:{{block type="magesetup/imprint_field" value="email"}}">{{block type="magesetup/imprint_field" value="email"}}</a> ou encore notre formulaire de contact situé sur notre site internet.
+    Vous pouvez contacter nottre service clientèle pour toutes questions ou réclamations auprès du numéro de téléphone suivant: {{block type="magesetup/imprint_field" value="telephone"}} ou bien par email {{block type="magesetup/imprint_field" value="email"}} ou encore notre formulaire de contact situé sur notre site internet.
 </p>
 
 <h3>Droits d'auteur et des marques</h3>
