changed firegento-pdf link to

--- a/src/app/design/adminhtml/default/default/template/magesetup/extensions.phtml
+++ b/src/app/design/adminhtml/default/default/template/magesetup/extensions.phtml
@@ -50,7 +50,7 @@
                     <tr><td class="value" colspan="2"><strong><?php echo $this->__('FireGento PDF') ?></strong></td></tr>
                     <tr>
                         <td class="label"><label for="name"><?php echo $this->__('MagentoConnect') ?></label></td>
-                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/pdf-9999.html" target="_blank">http://www.magentocommerce.com/magento-connect/pdf-9999.html</a></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/18239/" target="_blank">http://www.magentocommerce.com/magento-connect/pdf-9999.html</a></td>
                     </tr>
                     <tr>
                         <td class="label"><label for="name"><?php echo $this->__('Extension Key') ?></label></td>
